// SonarQube, open source software quality management tool.
// Copyright (C) 2008-2016 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarQube is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarQube is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

syntax = "proto2";

package sonarqube.ws.usertoken;

option java_package = "org.sonarqube.ws";
option java_outer_classname = "UserTokens";
option optimize_for = SPEED;

// WS api/user_tokens/generate
message GenerateWsResponse {
  optional string login = 1;
  optional string name = 2;
  optional string token = 3;
  optional string createdAt = 4;
  optional string type = 5;
  optional string projectKey = 6;
  optional string organizationKey = 7;
  optional string expirationDate = 8;
}

// WS api/user_tokens/search
message SearchWsResponse {
  optional string login = 1;
  repeated UserToken userTokens = 2;

  message UserToken {
    optional string name = 1;
    optional string createdAt = 2;
    optional string lastConnectionDate = 3;
    optional string type = 4;
    optional Project project = 5;
    optional string expirationDate = 6;
    optional bool isExpired = 7;

    message Project {
      optional string key = 1;
      optional string name = 2;
    }
  }
}
